2015-04-15 Fixed issue with parsing text in Text Selection module
2015-04-15 Deleted changes in css classes in Line Number module
2015-04-15 Added drag&drop feature to Ordering module
2015-04-15 Added property Hide default controls to Video module
2015-04-15 Added Is Not Activity property to Text Selection module
2015-04-14 Fixed issue with positioning axis elements and fixed issue with axis x values property in Line Number module
2015-04-14 Fixed issue with PopupPanelGlass in PopupPage
2015-04-13 Added sending event after pair matching in Memo Game module
2015-04-13 Fixed issue with rounding times in Text Audio module
2015-04-09 Fixed issue with random noises in LearnPen_Report module
2015-04-09 Fixed issue with state restoring in Shape Tracing module
2015-04-09 Fixed issue with label positions in full screen mode in Video module
2015-04-08 Added isAllOK method to Choice module
2015-04-08 Added possibility to add tips in Hangman module
2015-04-08 Fixed issue with css classes in Line Number module
2015-04-07 Fixed issue with hidden label in Video module
2015-04-04 Added new commands: descentsFromShape, numberOfLines, pointsMissed and getDirections to Shape Tracing module
2015-04-03 Added new Addon LearnPen Report
2015-04-02 Fixed issue with zoom on IE 10 in IWB Toolbar module
2015-04-02 Fixed issue with input restriction in eKeyboard module
2015-04-01 Fixed issue with eKeyboard cooperating with math gaps in eKeyboard module
2015-04-01 Fixed issue with allLinesDrawn() command and added styles for different modes in Figure Drawing module
2015-04-01 Fixed issue with draggable filledGap in Text module
2015-03-31 Fixed playing words in TextAudio while zooming using IWB Toolbard module
2015-03-31 Added getView() command to Shape module
2015-03-31 Fixed issue with crashing browser on iOS in eKeyboard module
2015-03-26 Fixed issue with setColor and nonremovable lines in Figure Drawing module